--- a/src/App.css
+++ b/src/App.css
@@ -248,6 +248,11 @@ button + button {
   resize: none;
   background-color: var(--bg-color);
   color: var(--blog-card-text-color);
+  padding-inline-start: 0;
+  padding-inline-end : 0;
+  padding-block-start : 5rem;
+  padding-block-end : 5rem;
+  /* text-align: center; */
 }
 
 #generatebuttondiv {
